Fixed profile banner spacing

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -28,7 +28,7 @@
             display: flex;
             flex-direction: column;
             gap: 18px;
-            margin-top: -52px;
+            margin-top: -36px;
             position: relative;
         }
 
